--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="d-flex align-items-center mb-3">Capacity</h6>
+                      <h5 class="d-flex align-items-center mb-3">Capacity</h5>
                       <small>Website programmer</small>
                       <div class="progress mb-3" style="height: 5px">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -128,6 +128,9 @@
                 </div>
                 
                 <div class="card col-sm-5 mb-3">
+			
+			<h5 class="d-flex align-items-center mb-3">2 Project</h5>
+			
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                       <h6 class="mb-0"><img src="icons/LRstor.png" alt="LRstor" width="24" height="24"> Website ┃ LR store</h6>
