--- a/Techno/english/Cryptocurrencies.html
+++ b/Techno/english/Cryptocurrencies.html
@@ -23,8 +23,8 @@
       </label>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#video">About</a></li>
-        <li><a href="##Artificial" class="active">Information</a></li>
+        <li><a href="../contact">Contact us</a></li>
+        <li><a href="#" class="active">Information</a></li>
       </ul>
     </nav>
   </header>
