--- a/Techno/english/Cryptocurrencies.html
+++ b/Techno/english/Cryptocurrencies.html
@@ -22,8 +22,8 @@
         <i class="fas fa-bars"></i>
       </label>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="../contact">Contact us</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../contact.html">Contact us</a></li>
         <li><a href="#" class="active">Information</a></li>
       </ul>
     </nav>
