--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           <!-- Breadcrumb -->
           <nav aria-label="breadcrumb" class="main-breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item active" aria-current="page">User Profile</li>
+              <li class="breadcrumb-item active" aria-current="page">My Profile</li>
+              <li class="breadcrumb-item" aria-current="page"> <a href="image.html">My Image</a> </li>
             </ol>
           </nav>
           <!-- /Breadcrumb -->
@@ -104,7 +105,7 @@
                 <div class="col-sm-6 mb-3">
                   <div class="card h-100">
                     <div class="card-body">
-                      <h5 class="d-flex align-items-center mb-3">Capacity</h5>
+                      <h5 class="d-flex align-items-center mb-3">Capacity</h6>
                       <small>Website programmer</small>
                       <div class="progress mb-3" style="height: 5px">
                         <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -139,8 +140,6 @@
                     </li>
                   </ul>
                 </div>
-
-
             </div>
           </div>
 
